# hexcompose

./: .gitignore  CMakeLists.txt  README.md  windows-x86_64-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
res/: app.rc.in  version.rc.in
src/: HexComposeApp.cpp  HexComposeApp.h  HexComposeVersion.h.in  main.cpp
src/hooks/: CapsAccentsHook.cpp  CapsAccentsHook.h  HookManager.cpp  HookManager.h  HookModule.h  UnicodeComposeHook.cpp  UnicodeComposeHook.h
src/util/: Logging.cpp  Logging.h  TrayIcon.cpp  TrayIcon.h  WinUtils.cpp  WinUtils.h
tools/: make-icons.sh
